// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionMasterDetailHeader> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-masterdetailheader xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetailHeader> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-masterdetailheader xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetailHeader> should include layout restriction class, if specified 1`] = `
<div
  className="xui-composition xui-composition-masterdetailheader xui-composition-is-finite xui-composition-masterdetailheader-retain-small"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
</div>
`;
